# pyturk

./: README.md  grad_graph  pyproject.toml  requirements.txt  value_graph
examples/: micrograd.ipynb
pyturk/: __init__.py  value.py
pyturk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyturk/data/: dataloader.py  dataset.py  transforms.py
pyturk/losses/: crossentropy.py  mse.py
pyturk/nn/: layer.py  mlp.py  neuron.py
pyturk/optim/: adam.py  rmsprop.py  scheduler.py  sgd.py
pyturk/utils/: graphviz.py  logging.py  visual.py
tests/: test_value2.py  test_value_class.py
